src/test/deca/codegen/valid/created/testClass/methodeParam.deca
class MyClass {
    int add(int a, int b) {
        return a + b;
    }
}