src/test/deca/codegen/invalid/created/testOpArith/noReturn.deca
class MyClass {
    int add(int a, int b) {
    }
}